<resources>
    <string name="app_name">My Brain</string>

    <string name="reminders_channel_description">Notification channel for sending tasks reminders notification</string>
    <string name="reminders_channel_name">Reminders</string>
    <string name="complete">Complete</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="spaces">Spaces</string>
    <string name="app_theme">App theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="auto_theme">Auto</string>
    <string name="start_up_screen">Startup screen</string>
    <string name="about">About</string>
    <string name="app_version">App version</string>
    <string name="project_on_github">Project on GitHub</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="product">Product</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="diary">Diary</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="calendar">Calendar</string>
    <string name="add_task">Add task</string>
    <string name="add_task_to_my_brain">Add task to My Brain</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="delete_sub_task">Delete sub task</string>
    <string name="add_sub_task">Add sub task</string>
    <string name="description">Description</string>
    <string name="request_feature_report_bug">Request a feature / Report a bug</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="due_date">Due date</string>
    <string name="error_empty_title">Title cannot be empty</string>
    <string name="priority">Priority</string>
    <string name="order_by">Order By</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="date_created">Date created</string>
    <string name="date_modified">Date modified</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="show_completed_tasks">Show completed tasks</string>
    <string name="search_tasks">Search tasks</string>
    <string name="save_task">Save task</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_task_confirmation_title">Delete task?</string>
    <string name="delete_note_confirmation_title">Delete note?</string>
    <string name="delete_bookmark_confirmation_title">Delete bookmark?</string>
    <string name="delete_diary_entry_confirmation_title">Delete entry?</string>
    <string name="delete_task_confirmation_message">Are you sure you want to delete the task: \n \"%1$s\""?</string>
    <string name="delete_note_confirmation_message">Are you sure you want to delete the note: \n \"%1$s\""?</string>
    <string name="delete_bookmark_confirmation_message">Are you sure you want to delete this bookmark""?</string>
    <string name="delete_diary_entry_confirmation_message">Are you sure you want to delete this entry""?</string>
    <string name="cancel">Cancel</string>
    <string name="no_tasks_message">You don\'t have any tasks\n Click the + button to add a new Task\n or \nby using the shortcut in the quick settings menu</string>
    <string name="no_notes_message">You don\'t have any notes\n Click the + button to add a new Note</string>
    <string name="no_entries_message">You don\'t have any entries\n Click the + button to add a new entry</string>
    <string name="no_bookmarks_message">You don\'t have any bookmarks\n Click the + button to add a new bookmark\n or \nby using the share option from any browser</string>
    <string name="project_roadmap">Project roadmap</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="note_content">Note content (supports markdown)</string>
    <string name="delete_note">Delete note</string>
    <string name="error_empty_note">Note cannot be empty</string>
    <string name="pin_note">Pin note</string>
    <string name="reading_mode">Reading mode</string>
    <string name="view_as">View as</string>
    <string name="search_notes">Search by title or content</string>
    <string name="add_note">Add note</string>
    <string name="save_bookmark">Bookmark link</string>
    <string name="add_to_tasks">Add to tasks</string>
    <string name="bookmark_saved">Bookmark saved successfully</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="open_link">Open link</string>
    <string name="search_bookmarks">Search bookmarks</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="url">URL</string>
    <string name="cancel_changes">Cancel changes</string>
    <string name="add_entry">Add entry</string>
    <string name="awesome">Awesome</string>
    <string name="good">Good</string>
    <string name="okay">Okay</string>
    <string name="bad">Bad</string>
    <string name="terrible">Terrible</string>
    <string name="delete_entry">Delete entry</string>
    <string name="content">Content</string>
    <string name="save_entry">Save entry</string>
    <string name="search_diary">Search diary</string>
    <string name="mood">Mood</string>
    <string name="event_time_at">%1$s - %2$s at %3$s</string>
    <string name="event_time">%1$s - %2$s</string>
    <string name="all_day">All day</string>
    <string name="no_read_calendar_permission_message">Read Calendar permission required for this feature to be available.\nPlease grant the permission</string>
    <string name="no_write_calendar_permission_message">Write Calendar permission required for this feature to be available.\nPlease grant the permission</string>
    <string name="grant_permission">Grant permission</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="add_event">Add event</string>
    <string name="include_calendars">Include calendars :</string>
    <string name="added_task">Added to tasks</string>
    <string name="diary_chart">Diary chart</string>
    <string name="mood_during_month">Your mood during the month</string>
    <string name="mood_during_year">Your mood during the year</string>
    <string name="percent">%1$d%%</string>
    <string name="mood_flow">Mood flow</string>
    <string name="mood_summary">Mood summary</string>
    <string name="your_mood_was">"Your mood was "</string>
    <string name="most_of_the_time">" most of the time "</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_year">Last year</string>
    <string name="no_data_yet">No data yet</string>
    <string name="no_events">No events yet</string>
    <string name="tasks_summary">Tasks summary</string>
    <string name="you_completed">You completed</string>
    <string name="of_last_week_tasks">of tasks in the last week</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="loading">Loading…</string>
    <string name="calendar_widget_refresh_message">Click the refresh button if you already granted the permission</string>
    <string name="thursday_30_calendar_preview">Thursday 30</string>
    <string name="sunday_5_calendar_preview">Sunday 5</string>
    <string name="dinner_with_ali_calender_preview">Dinner with Ali</string>
    <string name="cs_lecture_calender_preview">CS lecture</string>
    <string name="visit_dentist_tasks_preview">Visit dentist</string>
    <string name="buy_groceries_tasks_preview">Buy groceries</string>
    <string name="call_mom_tasks_preview">Call mom</string>
    <string name="app_font">App font</string>
    <string name="font_system_default">System default</string>
    <string name="delete_event">Delete event</string>
    <string name="location">Location</string>
    <string name="do_not_repeat">Do not repeat</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="error_future_event">Event should not be in the past</string>
    <string name="delete_event_confirmation_title">Delete event?</string>
    <string name="delete_event_confirmation_message">Are you sure you want do delete this event?</string>
    <string name="folders">Folders</string>
    <string name="create_folder">Create folder</string>
    <string name="error_folder_exists">Folder already exists</string>
    <string name="name">Name</string>
    <string name="change_folder">Change folder</string>
    <string name="none">None</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_folder_confirmation_message">Are you sure you want to delete this folder and all of its content?</string>
    <string name="save">Save</string>
    <string name="edit_folder">Edit folder</string>
    <string name="block_screenshots">Block screenshots</string>
    <string name="export_import">Export/Import</string>
    <string name="export">Export data</string>
    <string name="export_success">Successfully exported data"</string>
    <string name="export_failed">Something went wrong while exporting</string>
    <string name="import_data">Import data</string>
    <string name="import_success">Successfully imported data</string>
    <string name="import_failed">Something went wrong while importing. Make sure the file content are not corrupted</string>
    <string name="grant_permission_to_export">Grant permission to export</string>
    <string name="importing">Importing....</string>
    <string name="recurring">Recurring</string>
    <string name="repeats_every">Repeats every</string>
    <string name="encrypted">Encrypted</string>
    <string name="password">Password</string>
    <string name="every_hour">Every hour</string>
    <string name="every_minute">Every minute</string>
    <string name="lock_app">Lock app</string>
    <string name="auth_title">Unlock to use the App</string>
    <string name="auth_button">Unlock</string>
    <string name="auth_no_hardware">No biometric Hardware available</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="no_auth_method">No supported authentication method is set on your device</string>
    <string name="added_note">Added to notes</string>
    <string name="no_alarm_permission">Please grant alarms permission to set a due date.</string>
    <string name="exception_stack_trace_copied">Exception stack trace copied to clipboard</string>
    <string name="material_you_for_widgets">Material You for widgets</string>
</resources>