<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/large_item_rounded_corner_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp"
                android:gravity="end|center"
                >
                <ImageView
                    android:src="@drawable/ic_refresh"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="12dp"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:src="@drawable/ic_add"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="12dp"
                    tools:ignore="ContentDescription"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/large_inner_item_rounded_corner_shape"
            android:padding="6dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday_30_calendar_preview"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center"
                android:background="@drawable/small_item_rounded_corner_shape"
                android:padding="10dp"
                >
                <View
                    android:layout_width="8dp"
                    android:layout_height="32dp"
                    android:background="@drawable/small_item_rounded_corner_shape"
                    android:backgroundTint="@color/teal_200"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="4dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start|center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dinner_with_ali_calender_preview"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8 PM - 10 PM"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday_5_calendar_preview"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center"
                android:background="@drawable/small_item_rounded_corner_shape"
                android:padding="10dp"
                >
                <View
                    android:layout_width="8dp"
                    android:layout_height="32dp"
                    android:background="@drawable/small_item_rounded_corner_shape"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="4dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start|center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cs_lecture_calender_preview"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9 AM - 11:30 AM"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>